# agentic_emails_guyz

./: .env.example  .gitignore  GEMINI.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  start.sh
apps/worker/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  start_worker.sh
apps/worker/src/: celery_app.py  config.py  main.py  queue_worker.py
apps/worker/src/agents/: auto_verification_agent.py  command_understanding_agent.py  email_writer_agent.py  followup_agent.py  lead_enrichment_agent.py  reply_classifier_agent.py  scrapegraph_agent.py
apps/worker/src/data/cache/websites/: a-h-salon_com.json  akefields_salon.json  au_salonite_com.json  beauticianonline_com.json  beautycrew_com_au.json  beautysalons_com_au.json  bestinau_com_au.json  bestinsydney_com_au.json  bixie_com_au.json  broadsheet_com_au.json  businesshunter_com.json  (+87 more)
apps/worker/src/services/: browser_pool.py  business_analyzer.py  cheap_contact_extractor.py  country_adapters.py  ddg_searcher.py  directory_crawler.py  lead_discovery_pipeline.py  lead_quality_gate.py  location_expansion_service.py  memory_service.py  query_planner_service.py  query_rate_limiter.py  render_limiter.py  scrapegraph_fallback_extractor.py  search_result_normalizer.py  snapshot_store.py  source_health_checker.py  url_classifier_service.py  website_cache_service.py
apps/worker/src/services/normalization/: __init__.py  business_name_normalizer.py
apps/worker/src/workflows/: command_workflow.py
apps/worker/tests/: test_lead_discovery_pipeline.py  test_worker.py
(+173 files in other folders)
